Changed useLayouteffect to avoid jumping of text

--- a/src/components/style/brewercard.sass
+++ b/src/components/style/brewercard.sass
@@ -4,20 +4,20 @@
   position: relative
   margin-block-start: 3.125em
   padding: 2em
+  background-color: $clr-bg
   color: $clr-text
-  min-width: 20em
-  max-width: 23.5rem
+  width: 22rem
   border-radius: .3125rem
-  box-shadow: rgba(black, 0.24) 0px 54px 55px, rgba(black, 0.12) 0px -12px 30px, rgba(black, 0.12) 0px 4px 6px, rgba(black, 0.411) 0px 12px 13px, rgba(black, 0.123) 0px -3px 5px
+  box-shadow: rgba(black, 0.09) 0px 2px 1px, rgba(black, 0.09) 0px 4px 2px, rgba(black, 0.09) 0px 8px 4px, rgba(black, 0.09) 0px 16px 8px, rgba(black, 0.09) 0px 32px 16px
 
   @media (min-width: 22.8125em)
     margin-inline: auto
 
   @media (min-width: 61.25em)
-    max-width: 22em
     margin: 0
     display: grid
     place-content: center
+    border-radius: 0
 
   h2
     text-align: center
