--- a/src/components/style/footer.sass
+++ b/src/components/style/footer.sass
@@ -8,6 +8,7 @@
   place-content: center
   text-align: center
   font-size: .75rem
+  font-weight: 600
   background-color: $clr-pri
   z-index: 2
 
