--- a/src/global.sass
+++ b/src/global.sass
@@ -1,4 +1,10 @@
-/* Box sizing rules */
+$clr-pri: #FF9F1C
+$clr-sec: #AC3931
+$clr-bg: #001b2e
+$clr-bg-body: #363636
+$clr-text: #f0f0f0
+$clr-dark: #050000
+
 *,
 *::before,
 *::after
@@ -32,8 +38,8 @@ body
   min-height: 100vh
   text-rendering: optimizeSpeed
   line-height: 1.5
-  background: #001B2E
-  color: #FAF9F9
+  background: $clr-bg-body
+  color: $clr-text
   font-family: 'Roboto', sans-serif
 
 /* A elements that don't have a class get default styles */
